--- a/nabihah-resume/index.html
+++ b/nabihah-resume/index.html
@@ -159,7 +159,7 @@ To be able to qualify a position related to my field of specialization (Multimed
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-1.jpeg" alt="">
+                        <img src="images/profile-1.png" alt="">
                         <div class="text">Someone name</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
